[gd_scene load_steps=4 format=2]

[ext_resource path="res://kra_imported/figher-32x32.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Miscs/distroy.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/enemies/fighter.gd" type="Script" id=3]

[node name="virus" type="Area2D" groups=[
"fighter",
]]
rotation = 3.14159
z_index = -1
script = ExtResource( 3 )

[node name="sprite" type="Sprite" parent="."]
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )

[node name="shape" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( 0.40564, -62.2066, -62.6478, 56.0065, 59.1852, 55.6097 )

[node name="distroy" parent="." instance=ExtResource( 2 )]
scale = Vector2( 5, 5 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
rect = Rect2( -64, -64, 128, 128 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.75
autostart = true
[connection signal="area_entered" from="." to="." method="_on_virus_area_entered"]
[connection signal="animation_finished" from="distroy" to="." method="_on_distroy_animation_finished"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
